--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -20,10 +20,11 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
-<ul>
+<ul class='menu'>
   <li><%= link_to 'TechniqueTypes', admin_technique_types_path %></li>
   <li><%= link_to 'Techniques', admin_techniques_path %></li>
 </ul>
+
 <%= yield %>
 
 </body>
