--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 
   <%= stylesheet_link_tag 'ui-lightness/jquery-ui-1.8rc3.custom' %>
   <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'fullcalendar' %>
   <% if File.exist? File.join(Rails.public_path, "stylesheets/#{controller.controller_name}.css") %>
     <%= stylesheet_link_tag controller.controller_name %>
   <% end %>
@@ -16,6 +17,7 @@
   <%= javascript_include_tag 'jquery.cycle' %>
   <%= javascript_include_tag 'jcountr' %>
   <%= javascript_include_tag 'jquery.sound' %>
+  <%= javascript_include_tag 'fullcalendar' %>
   
   <% if File.exist? File.join(Rails.public_path, "javascripts/#{controller.controller_name}.js") %>
     <%= javascript_include_tag controller.controller_name %>
@@ -34,6 +36,13 @@
     <%= link_to "Sign in", new_user_session_path %>
   <% end %>
 </div>
+
+<% if user_signed_in? %>
+<ul class= 'menu'>
+  <li><%= link_to 'Practices', practices_path %></li>
+  <li><%= link_to 'Calendar', practice_events_path %></li>
+</ul>
+<% end %>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
