--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,54 +1,66 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= controller.controller_name.capitalize %>: <%= controller.action_name %></title>
+  <head>
+    <title><%= controller.controller_name.capitalize %>: <%= controller.action_name %></title>
 
-  <%= stylesheet_link_tag 'ui-lightness/jquery-ui-1.8rc3.custom' %>
-  <%= stylesheet_link_tag 'scaffold' %>
-  <%= stylesheet_link_tag 'fullcalendar' %>
-  <% if File.exist? File.join(Rails.public_path, "stylesheets/#{controller.controller_name}.css") %>
-    <%= stylesheet_link_tag controller.controller_name %>
-  <% end %>
+    <%= stylesheet_link_tag 'ui-lightness/jquery-ui-1.8rc3.custom' %>
+    <%= stylesheet_link_tag 'application' %>
+    <%= stylesheet_link_tag 'scaffold' %>
+    <%= stylesheet_link_tag 'fullcalendar' %>
+    <% if File.exist? File.join(Rails.public_path, "stylesheets/#{controller.controller_name}.css") %>
+      <%= stylesheet_link_tag controller.controller_name %>
+    <% end %>
 
-  <%= javascript_include_tag 'jquery-1.4.2.min' %>
-  <%= javascript_include_tag 'jquery.rails' %>
-  <%= javascript_include_tag 'jquery-ui-1.8rc3.custom.min' %>
-  <%= javascript_include_tag 'jquery.jeditable' %>
-  <%= javascript_include_tag 'jquery.cycle' %>
-  <%= javascript_include_tag 'jcountr' %>
-  <%= javascript_include_tag 'jquery.sound' %>
-  <%= javascript_include_tag 'fullcalendar' %>
-  <%= javascript_include_tag 'timepicker' %>
-  
-  <% if File.exist? File.join(Rails.public_path, "javascripts/#{controller.controller_name}.js") %>
-    <%= javascript_include_tag controller.controller_name %>
-  <% end %>
-  
-  <%= csrf_meta_tag %>
-</head>
-<body>
+    <%= javascript_include_tag 'jquery-1.4.2.min' %>
+    <%= javascript_include_tag 'jquery.rails' %>
+    <%= javascript_include_tag 'jquery-ui-1.8rc3.custom.min' %>
+    <%= javascript_include_tag 'jquery.jeditable' %>
+    <%= javascript_include_tag 'jquery.cycle' %>
+    <%= javascript_include_tag 'jcountr' %>
+    <%= javascript_include_tag 'jquery.sound' %>
+    <%= javascript_include_tag 'fullcalendar' %>
+    <%= javascript_include_tag 'timepicker' %>
 
-<div id="user_nav">
-  <% if user_signed_in? %>
-    Signed in as <%= current_user.email %>. Not you?
-    <%= link_to "Sign out", destroy_user_session_path %>
-  <% else %>
-    <%= link_to "Sign up", new_user_registration_path %> or
-    <%= link_to "Sign in", new_user_session_path %>
-  <% end %>
-</div>
+    <% if File.exist? File.join(Rails.public_path, "javascripts/#{controller.controller_name}.js") %>
+      <%= javascript_include_tag controller.controller_name %>
+    <% end %>
 
-<% if user_signed_in? %>
-<ul class= 'menu'>
-  <li><%= link_to 'Practices', practices_path %></li>
-  <li><%= link_to 'Practice Events', practice_events_path %></li>
-</ul>
-<% end %>
+    <%= csrf_meta_tag %>
+  </head>
+  <body>
+    <div id='header'>
+      <h1>Sadhana</h1>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+      <div id='menu'>
+        <% if user_signed_in? %>
+          <ul class= 'menu'>
+            <li><%= link_to 'My Practices', practices_path %></li>
+            <li><%= link_to 'Calendar', practice_events_path %></li>
+          </ul>
+        <% end %>
+      </div>
 
-<%= yield %>
+      <div id="user_nav">
+        <p>
+          <% if user_signed_in? %>
+            Signed in as <%= current_user.email %>. Not you?
+            <%= link_to "Sign out", destroy_user_session_path %>
+          <% else %>
+            <%= link_to "Sign up", new_user_registration_path %> or
+            <%= link_to "Sign in", new_user_session_path %>
+          <% end %>
+        </p>
+      </div>
+      
+    </div>
 
-</body>
+
+
+    <div id='content'>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+
+      <%= yield %>
+    </div>
+  </body>
 </html>
