--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
     <%= javascript_include_tag 'timepicker' %>
     <%= javascript_include_tag 'dragscrollable' %>
     <%= javascript_include_tag 'jquery.mousewheel' %>
+    <%= javascript_include_tag 'jquery.quicksearch' %>
 
     <% if File.exist? File.join(Rails.public_path, "javascripts/#{controller.controller_name}.js") %>
       <%= javascript_include_tag controller.controller_name %>
@@ -53,10 +54,7 @@
           <% end %>
         </p>
       </div>
-      
     </div>
-
-
 
     <div id='content'>
       <p class="notice"><%= notice %></p>
