--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -17,11 +17,16 @@
   <%= jeditable_field(:practice, :delay) %>
 </p>
 <div id='practice_editor'>
+  <form method="get">
+    <div>
+      <input type="text" value="" name="q" id="q" />
+    </div>
+  </form>
   <div id="techniques_accordion">
     <% TechniqueType.all.each do |technique_type| %>
       <h3><a href="#"><%= technique_type.name %></a></h3>
       <div class='techniques-viewport'>
-        <div>
+        <div class='techniques-list'>
           <% technique_type.techniques.each do |technique| %>
             <div class='<%= technique_type.symbol %> practice_technique' technique_id='<%= technique.id %>'><h3><%= technique.name %></h3></div>
           <% end %>
@@ -37,12 +42,15 @@
 </div>
 
 <%= javascript_tag do %>
-  $('#techniques_accordion .techniques-viewport').dragscrollable();
+  // $('#techniques_accordion .techniques-viewport').dragscrollable();
 
   // using the event helper
   $('#techniques_accordion .techniques-viewport').mousewheel(function(event, delta) {
     initial_value = $('#techniques_accordion .techniques-viewport').scrollTop();
     $('#techniques_accordion .techniques-viewport').scrollTop(initial_value + delta*10);
+  });
+  $(document).ready(function(){
+    $('#q').quicksearch('.techniques-list div');
   });
 <% end %>
 
