--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -10,6 +10,15 @@
   cursor: s-resize;
 }
 
+#techniques_accordion .techniques-viewport ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#techniques_accordion .techniques-viewport ul li {
+}
+
 #techniques_accordion .practice_technique {
   width: 80%;
   margin-left: 10%;
