--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -17,24 +17,26 @@
   <%= jeditable_field(:practice, :delay) %>
 </p>
 <div id='practice_editor'>
-  <div class='ui-accordion ui-widget ui-helper-reset ui-accordion-icons'>
-  <form id='quicksearch' method="get" class='ui-accordion-header ui-helper-reset ui-state-default ui-corner-all'>
-    <div>
-      <input type="text" value="" name="q" id="q" />
-    </div>
-  </form>
-  </div>
-  <div id="techniques_accordion">
-    <% TechniqueType.all.each do |technique_type| %>
-      <h3><a href="#"><%= technique_type.name %></a></h3>
-      <div class='techniques-viewport'>
-        <div class='techniques-list'>
-          <% technique_type.techniques.each do |technique| %>
-            <div class='<%= technique_type.symbol %> practice_technique' technique_id='<%= technique.id %>'><h3><%= technique.name %></h3></div>
-          <% end %>
+  <div id='sidebar'>
+    <div class='ui-accordion ui-widget ui-helper-reset ui-accordion-icons'>
+      <form id='quicksearch' method="get" class='ui-accordion-header ui-helper-reset ui-state-default ui-corner-all'>
+        <div>
+          <input type="text" value="" name="q" id="q" />
         </div>
-      </div>
-    <% end %>
+      </form>
+    </div>
+    <div id="techniques_accordion">
+      <% TechniqueType.all.each do |technique_type| %>
+        <h3><a href="#"><%= technique_type.name %></a></h3>
+        <div class='techniques-viewport'>
+          <div class='techniques-list'>
+            <% technique_type.techniques.each do |technique| %>
+              <div class='<%= technique_type.symbol %> practice_technique' technique_id='<%= technique.id %>'><h3><%= technique.name %></h3></div>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
   <div id='practice_techniques'>
     <% @practice.practice_techniques.each do |practice_technique| %>
