--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -14,7 +14,8 @@
 }
 
 #techniques_accordion .techniques-viewport {
-  height: 200px;
+  min-height: 300px;
+  height: 400px;
   padding: 0;
   overflow: hidden;
   cursor: s-resize;
@@ -39,14 +40,19 @@
 .practice_technique {
   cursor: move;
   border: 1px solid black;
+  position: relative;
+  width: 100px;
+  height: 100px;
 }
+
 #practice_techniques {
-  width: 84%;
+  width: 84.5%;
   min-height: 165px;
   display: inline-block;
   vertical-align: top;
   border: 1px solid #ccc;
   -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
 }
 #practice_techniques .practice_technique {
   width: 150px;
@@ -58,6 +64,10 @@
 }
 .practice_technique h3 {
   text-align: center;
+}
+
+.practice_technique img {
+  position: absolute;
 }
 
 .practice_technique #associated_techniques {
