--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -15,15 +15,18 @@
     <td><%= practice.description %></td>
     <td><%= link_to 'Play', play_practice_path(practice) %></td>
     <td><%= link_to 'Show', practice %></td>
-    <noscript>
-      <td><%= link_to 'Edit', edit_practice_path(practice) %></td>
-    </noscript>
-    <td><%= link_to 'Add to calendar', new_practice_event_path(:practice_event => {:practice_id => practice.id}) %></td>
+    <td><%= link_to_function 'Add to calendar', "$.ajax({
+                            type:'get',
+                            data: 'practice_event[practice_id]=#{ practice.id }',
+                            dataType: 'script',
+                            url: '/practice_events/new'
+                          });"%>
+    </td>
     <td><%= link_to 'Destroy', practice, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
-
+<div id='edit_dialog' style='display:none'></div>
 <br />
 
 <%= link_to 'New Practice', new_practice_path %>
