--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div id='header'>
-      <h1>Sadhana</h1>
+      <h1>S&aacute;dhana</h1>
 
       <div id='menu'>
         <% if user_signed_in? %>
