--- a/app/views/practices/_form.html.erb
+++ b/app/views/practices/_form.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="field">
     <%= f.label :delay %><br />
-    <%= f.text_area :delay %>
+    <%= f.text_field :delay %>
   </div>
   <div class="actions">
     <%= f.submit %>
