--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -43,159 +43,147 @@
 </div>
 
 <%= javascript_tag do %>
-  $(document).ready(function(){
-    $('#q').quicksearch('.techniques-list div');
-  });
-<% end %>
-
-<%= javascript_tag do %>
-$('#practice_techniques').sortable(
-  {
-    revert: 'invalid',
-    opacity: 0.4,
-    update: function(){
-      $.ajax({
-          type: 'post',
-          data: $('#practice_techniques').sortable('serialize') + '&practice_id=<%=@practice.id-%>',
-          dataType: 'script',
-          url: '<%= sort_practice_practice_techniques_path(@practice) %>'})
-      }
-    }
-  );
-<% end %>
-
-<%= javascript_tag do %>
-  $('#techniques_accordion .asana').draggable({
-    scroll: false,
-    connectToSortable: '#practice_techniques',
-    helper: 'clone',
-    appendTo : 'body',
-    revert: 'invalid',
-    drag: function(event, ui) {
-      ui.helper.css({width: '150px', height: '150px'});
-    }
-  });
-
-  $('#techniques_accordion .mudra').draggable({
-    scroll: false,
-    helper: 'clone',
-    appendTo : 'body',
-    revert: 'invalid',
-    drag: function(event, ui) {
-      ui.helper.css({border:'1px solid black'});
-    }
-  });
-<% end %>
-
-<%= javascript_tag do %>
-$("#practice_techniques").droppable({
-  accept: '.asana',
-  drop: function(event, ui) {
-    if(ui.draggable.hasClass('ui-draggable')) {
-      ui.draggable.removeClass('ui-draggable').removeClass('technique').addClass('practice_technique');
-      // create new practice technique via synchronous ajax
-      $.ajax({
-          type: 'post',
-          async: false,
-          data: 'practice_id=<%=@practice.id-%>&practice_technique[technique_id]=' + ui.draggable.attr('technique_id'),
-          dataType: 'script',
-          beforeSend: function() {
-            // inform the user we're working
-            ui.draggable.addClass('working');
-          },
-          complete: function(request){
-            ui.draggable.removeClass('working');
-            ui.draggable.attr('id',$('#created_practice_technique .practice_technique').attr('id'));
-            ui.draggable.attr('practice_technique_id', $('#created_practice_technique .practice_technique').attr('practice_technique_id'));
-            ui.draggable.html($('#created_practice_technique .practice_technique').html());
-            $('#created_practice_technique').children().remove();
-            $('#' + ui.draggable.attr('id')).droppable({
-              accept: '.mudra',
-              drop: function(event, mudra_ui) {
-                if(mudra_ui.draggable.hasClass('ui-draggable')) {
-                  // associate new practice technique via ajax
-                  $.ajax({
-                      type: 'put',
-                      data: 'practice_id=<%= @practice.id-%>&id=' + ui.draggable.attr('practice_technique_id') + '&practice_technique[add_technique_id]=' + mudra_ui.draggable.attr('technique_id'),
-                      dataType: 'script',
-                      url: '/practices/<%= @practice.id-%>/practice_techniques/' + ui.draggable.attr('practice_technique_id')});
-                }
-              }
-            });
-          },
-          url: '<%= practice_practice_techniques_path(@practice) %>'});
-    }
-  }
-});
-
-
-<% end %>
-
-<%= javascript_tag do %>
-  $.ajax({
-    type:'get',
-    data: { 'symbol': 'asana' },
-    dataType: 'script',
-    url: '/techniques'
-  });
-  $("#techniques_accordion").accordion({ changestart: function(event, ui) {
-    if($('#' + ui.newHeader.attr('symbol') + '_techniques_list').length == 0) {
-      $.ajax({
-        type:'get',
-        data: { 'symbol': ui.newHeader.attr('symbol') },
-        dataType: 'script',
-        url: '/techniques'
-      });
-    }
-  }});
-<% end %>
-
-<%= javascript_tag do %>
-  $('#delete_link').live('click', function() {
-    practice_technique_id = $(this).parents('.practice_technique').attr('practice_technique_id');
-    $('#confirm_dialog').dialog({
-      resizable: false,
-      height:140,
-      modal: true,
-      buttons: {
-        'Delete': function() {
-          $.ajax({
-              type:'post',
-              data: { '_method': 'delete' },
-              dataType: 'json',
-              url: '/practices/<%= @practice.id %>/practice_techniques/' + practice_technique_id,
-              success: function(data) {
-                $('#practice_technique_'+practice_technique_id).fadeOut('slow', function() {
-                    $('#practice_technique_'+practice_technique_id).remove();
-                });
-              }
-          });
-          $(this).dialog('close');
-        },
-        Cancel: function() {
-          $(this).dialog('close');
-        }
-      }
-    });
-  });
-
-  $('#edit_link').live('click', function() {
-    practice_technique_id = $(this).parents('.practice_technique').attr('practice_technique_id');
-    $.ajax({
-        type:'get',
-        dataType: 'script',
-        url: '/practices/<%= @practice.id %>/practice_techniques/' + practice_technique_id + '/edit'
-    });
-  });
-<% end %>
-<div id='edit_dialog' style='display:none'></div>
-<div id='confirm_dialog'></div>
-
-<%= javascript_tag do %>
   $('#techniques_accordion').height($(window).height() - 300);
   $('#practice_techniques').height($(window).height() - 200);
   $(window).resize(function() {
     $('#techniques_accordion .techniques-viewport').height($(window).height() - 310);
     $('#practice_techniques').height($(window).height() - 200);
   });
+  $(document).ready(function(){
+    var qs = $('#q').quicksearch('.ui-accordion-content-active .techniques-list .technique', {selector: 'h3'});
+    $.ajax({
+      type:'get',
+      data: { 'symbol': 'asana' },
+      dataType: 'script',
+      url: '/techniques',
+      complete: function(){
+        qs.cache();
+      }
+    });
+    $('#practice_techniques').sortable(
+    {
+      revert: 'invalid',
+      opacity: 0.4,
+      update: function(){
+        $.ajax({
+            type: 'post',
+            data: $('#practice_techniques').sortable('serialize') + '&practice_id=<%=@practice.id-%>',
+            dataType: 'script',
+            url: '<%= sort_practice_practice_techniques_path(@practice) %>'})
+        }
+      }
+    );
+    $('#techniques_accordion .asana').draggable({
+      scroll: false,
+      connectToSortable: '#practice_techniques',
+      helper: 'clone',
+      appendTo : 'body',
+      revert: 'invalid',
+      drag: function(event, ui) {
+        ui.helper.css({width: '150px', height: '150px'});
+      }
+    });
+
+    $('#techniques_accordion .mudra').draggable({
+      scroll: false,
+      helper: 'clone',
+      appendTo : 'body',
+      revert: 'invalid',
+      drag: function(event, ui) {
+        ui.helper.css({border:'1px solid black'});
+      }
+    });
+
+    $("#practice_techniques").droppable({
+      accept: '.asana',
+      drop: function(event, ui) {
+        if(ui.draggable.hasClass('ui-draggable')) {
+          ui.draggable.removeClass('ui-draggable').removeClass('technique').addClass('practice_technique');
+          // create new practice technique via synchronous ajax
+          $.ajax({
+              type: 'post',
+              async: false,
+              data: 'practice_id=<%=@practice.id-%>&practice_technique[technique_id]=' + ui.draggable.attr('technique_id'),
+              dataType: 'script',
+              beforeSend: function() {
+                // inform the user we're working
+                ui.draggable.addClass('working');
+              },
+              complete: function(request){
+                ui.draggable.removeClass('working');
+                ui.draggable.attr('id',$('#created_practice_technique .practice_technique').attr('id'));
+                ui.draggable.attr('practice_technique_id', $('#created_practice_technique .practice_technique').attr('practice_technique_id'));
+                ui.draggable.html($('#created_practice_technique .practice_technique').html());
+                $('#created_practice_technique').children().remove();
+                $('#' + ui.draggable.attr('id')).droppable({
+                  accept: '.mudra',
+                  drop: function(event, mudra_ui) {
+                    if(mudra_ui.draggable.hasClass('ui-draggable')) {
+                      // associate new practice technique via ajax
+                      $.ajax({
+                          type: 'put',
+                          data: 'practice_id=<%= @practice.id-%>&id=' + ui.draggable.attr('practice_technique_id') + '&practice_technique[add_technique_id]=' + mudra_ui.draggable.attr('technique_id'),
+                          dataType: 'script',
+                          url: '/practices/<%= @practice.id-%>/practice_techniques/' + ui.draggable.attr('practice_technique_id')});
+                    }
+                  }
+                });
+              },
+              url: '<%= practice_practice_techniques_path(@practice) %>'});
+        }
+      }
+    });
+    $("#techniques_accordion").accordion({ changestart: function(event, ui) {
+      if($('#' + ui.newHeader.attr('symbol') + '_techniques_list').length == 0) {
+        $.ajax({
+          type:'get',
+          data: { 'symbol': ui.newHeader.attr('symbol') },
+          dataType: 'script',
+          url: '/techniques',
+          complete: function() {
+            qs.cache();
+          }
+        });
+      }
+    }});
+    $('#delete_link').live('click', function() {
+      practice_technique_id = $(this).parents('.practice_technique').attr('practice_technique_id');
+      $('#confirm_dialog').dialog({
+        resizable: false,
+        height:140,
+        modal: true,
+        buttons: {
+          'Delete': function() {
+            $.ajax({
+                type:'post',
+                data: { '_method': 'delete' },
+                dataType: 'json',
+                url: '/practices/<%= @practice.id %>/practice_techniques/' + practice_technique_id,
+                success: function(data) {
+                  $('#practice_technique_'+practice_technique_id).fadeOut('slow', function() {
+                      $('#practice_technique_'+practice_technique_id).remove();
+                  });
+                }
+            });
+            $(this).dialog('close');
+          },
+          Cancel: function() {
+            $(this).dialog('close');
+          }
+        }
+      });
+    });
+
+    $('#edit_link').live('click', function() {
+      practice_technique_id = $(this).parents('.practice_technique').attr('practice_technique_id');
+      $.ajax({
+          type:'get',
+          dataType: 'script',
+          url: '/practices/<%= @practice.id %>/practice_techniques/' + practice_technique_id + '/edit'
+      });
+    });
+  });
 <% end %>
+
+<div id='edit_dialog' style='display:none'></div>
+<div id='confirm_dialog'></div>
