style on practices index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title><%= controller.controller_name.capitalize %>: <%= controller.action_name %></title>
 
     <%= stylesheet_link_tag 'ui-lightness/jquery-ui-1.8rc3.custom' %>
+    <%= stylesheet_link_tag 'awesome' %>
     <%= stylesheet_link_tag 'application' %>
     <%= stylesheet_link_tag 'scaffold' %>
     <%= stylesheet_link_tag 'fullcalendar' %>
