--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -10,7 +10,7 @@
       type:'get',
       dataType: 'script',
       url: '/practices/new'
-    });" %>
+    });", :class => 'blue medium awesome' %>
 
 <h2>Shared Practices</h2>
 <h3>Soon!</h3>
